feat: Implement initial UI layout and styling for the restaurant page, including navigation, hero, and gallery sections with updated fonts and image assets.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Simplotel Assignment - Pixel Perfect UI">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simplotel Assignment</title>
+    <meta name="description" content="Restaurant UI Implementation">
+    <title>Restaurant UI</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    
+    <!-- Navigation -->
     <header class="main-header">
         <nav class="navbar">
             <ul class="nav-links">
@@ -42,26 +44,26 @@
             </div>
         </section>
 
-        <!-- Collage & Info Section -->
+        <!-- Gallery Section -->
         <section class="content-section">
             <div class="gallery-grid">
-                <!-- Top Left Image -->
+                <!-- Top Left: Neon Stage -->
                 <div class="gallery-item item-1">
-                    <img src="images/pexels-mister-mister-3434523.jpg" alt="Restaurant Interior">
+                    <img src="images/pexels-rachel-claire-6752433.jpg" alt="Neon Stage">
                 </div>
-                <!-- Bottom Left Image -->
+                <!-- Bottom Left: Outdoor Street -->
                 <div class="gallery-item item-2">
-                    <img src="images/pexels-rachel-claire-6752433.jpg" alt="Outdoor Dining">
+                    <img src="images/pexels-eva-bronzini-6141651.jpg" alt="Outdoor Dining">
                 </div>
-                <!-- Tall Right Image -->
+                <!-- Right Tall: Plated Food -->
                 <div class="gallery-item item-3">
-                    <img src="images/pexels-eva-bronzini-6141651.jpg" alt="Plated Food">
+                    <img src="images/pexels-mister-mister-3434523.jpg" alt="Plated Food">
                 </div>
             </div>
 
             <div class="red-banner">
                 <span class="banner-subtitle">LOREM IPSUM</span>
-                <h2 class="banner-title">LOREM IPSUM SET ADEMIR</h2>
+                <h2 class="banner-title">LOREM IPSUM <br>SET ADEMIR</h2>
                 <button class="btn-link">
                     Click <img src="images/icons8-arrow-30.png" alt="Arrow" class="arrow-icon">
                 </button>
